<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="roomba">Roomba</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="IP_ADDR">IP Addr</string>
    <string name="Button_con">Connect</string>
    <string name="Button1">Forward</string>
    <string name="Button2">Backward</string>
    <string name="Button3">Left Turn</string>
    <string name="Button4">Right Turn</string>
    <string name="Button5">Stop</string>
    <string name="Button6">Quit</string>

</resources>